--- a/index.html
+++ b/index.html
@@ -207,6 +207,30 @@
                 </main>
             </div>
         </div>
+        <script id="template-article-link" type="text/x-handlebars-template">
+            <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+        </script>
+        <script id="template-tag-link" type="text/x-handlebars-template">
+            <li><a href="#tag-{{ tag }}"><span>{{ tag }}</span></a></li>
+        </script>
+        <script id="template-author-link" type="text/x-handlebars-template">
+            <p>Author: <a href="#author-{{ author }}"><span>{{ author }}</span></a></p>
+        </script>
+        <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+            <ul>
+              {{#each tags}}
+                <li><a href="#" data-tag="{{ tag }}" class="{{ className }}"><span>{{ tag }} ({{ count }})</span></a></li>
+              {{/each}}
+            </ul>
+        </script>  
+        <script id="template-author-cloud-link" type="text/x-handlebars-template">
+            <ul>
+              {{#each authors}}
+                <li><a href="#" data-author="{{ author }}" class="{{ className }}"><span>{{ author }} ({{ count }})</span></a></li>
+              {{/each}}
+            </ul>
+          </script>        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
